<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/premium_content_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/menu_top_text"
        android:textColor="#FF000000"
        android:layout_marginTop="6dp"
        android:textSize="20sp"
    />

    <ImageView
        android:id="@+id/menu_banner"
        android:layout_below="@+id/menu_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/menu_status_message"
        android:layout_below="@+id/menu_banner"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/no_reservation_message"
        android:textColor="#FFEEEE00"
        android:background="#FF000000"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/menu_greet"
        android:layout_below="@+id/menu_status_message"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:textColor="#FF000000"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/menu_announce"
        android:layout_below="@+id/menu_greet"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:textColor="#FFFF4400"
        android:background="#FFFFAA88"
        android:textSize="18sp"
        />

    <RelativeLayout
        android:id="@+id/menu_log_layout"
        android:layout_below="@+id/menu_announce"
        android:background="@mipmap/fot_nav1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/menu_pre_done"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF000000"
            android:textSize="12sp"
            android:text="@string/menu_prefix_done"
            />

        <TextView
            android:id="@+id/menu_pre_done_range"
            android:layout_below="@+id/menu_pre_done"
            android:layout_alignLeft="@+id/menu_pre_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF000000"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/menu_album_button"
            android:layout_below="@+id/menu_pre_done_range"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/btn_next1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF"
            android:paddingBottom="48dp"
            android:text="@string/menu_show_album_text"/>
    </RelativeLayout>
</RelativeLayout>
